--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/hyperspectral_functions/intro_hyperspectral_functions.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/hyperspectral_functions/intro_hyperspectral_functions.ipynb
@@ -31,10 +31,10 @@
     "This tutorial uses the Level 3 <a href=\"https://data.neonscience.org/data-products/DP3.30006.002\" target=\"_blank\">Spectrometer orthorectified surface bidirectional reflectance - mosaic</a> data product. \n",
     "\n",
     "\n",
-    "<div id=\"ds-ojectives\" markdown=\"1\">\n",
+    "<div id=\"ds-objectives\" markdown=\"1\">\n",
     "\n",
     "\n",
-    "### Objectives\n",
+    "### Learning Objectives\n",
     "\n",
     "After completing this tutorial, you will be able to:\n",
     "\n",
