changes to match .md updates to intro block

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/hyperspectral_functions/intro_hyperspectral_functions.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/hyperspectral_functions/intro_hyperspectral_functions.ipynb
@@ -34,7 +34,7 @@
     "<div id=\"ds-objectives\" markdown=\"1\">\n",
     "\n",
     "\n",
-    "### Learning Objectives\n",
+    "## Learning Objectives\n",
     "\n",
     "After completing this tutorial, you will be able to:\n",
     "\n",
@@ -42,6 +42,12 @@
     "* Download and read in tiled NEON AOP reflectance hdf5 data and associated metadata\n",
     "* Plot a single band of reflectance data\n",
     "* Stack and plot 3-band combinations to visualize true color and false color images\n",
+    "\n",
+    "## Things you'll need to complete this tutorial\n",
+    "\n",
+    "### Python\n",
+    "\n",
+    "You will need a current version of Python (3.9+) to complete this tutorial. We also recommend the Jupyter Notebook IDE to follow along with this notebook.\n",
     "\n",
     "### Install Python Packages\n",
     "\n",
@@ -55,14 +61,10 @@
     "\n",
     "### Data\n",
     "\n",
-    "Data and additional scripts required for this lesson are downloaded programmatically as part of the tutorial.\n",
+    "Data and additional scripts required for this lesson are downloaded programmatically as part of the tutorial. The data used in this lesson were collected over NEON's\n",
+    "<a href=\"https://www.neonscience.org/field-sites/dsny\" target=\"_blank\">Disney Wilderness Preserve (DSNY)</a> field site in 2023. The dataset can also be downloaded from the <a href=\"http://data.neonscience.org\" target=\"_blank\">NEON Data Portal</a>.\n",
     "\n",
-    "The data used in this lesson were collected over NEON's\n",
-    "<a href=\"https://www.neonscience.org/field-sites/dsny\" target=\"_blank\">Disney Wilderness Preserve (DSNY)</a> field site and processed at NEON headquarters.\n",
-    "\n",
-    "The dataset can also be downloaded from the <a href=\"http://data.neonscience.org\" target=\"_blank\">NEON Data Portal</a>.\n",
-    "\n",
-    "### Requirements\n",
+    "### Other Set-Up Requirements\n",
     "\n",
     "Set up a **NEON user account and token**, if you haven't already done so. Follow the tutorial below to learn how to do this (check the Python tabs in the code cells for the Python syntax.\n",
     "\n",
@@ -70,7 +72,7 @@
     "\n",
     "Note: for this tutorial, we have set up the token as an environment variable, following \"Option 2: Set token as environment variable\" in the linked lesson.\n",
     "\n",
-    "### Recommended Resources\n",
+    "### Additional Resources\n",
     "If you are new to AOP hyperspectral data, we recommend exploring the following tutorial series:\n",
     "\n",
     "<a href=\"https://www.neonscience.org/resources/learning-hub/tutorials/introduction-hyperspectral-remote-sensing-data-python\" target=\"_blank\">Introduction to Hyperspectral Remote Sensing Data in Python</a>\n",
