update token set up section to match .md updates

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/hyperspectral_functions/intro_hyperspectral_functions.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/hyperspectral_functions/intro_hyperspectral_functions.ipynb
@@ -66,11 +66,9 @@
     "\n",
     "### Other Set-Up Requirements\n",
     "\n",
-    "Set up a **NEON user account and token**, if you haven't already done so. Follow the tutorial below to learn how to do this (check the Python tabs in the code cells for the Python syntax.\n",
+    "Set up a **NEON user account and token**, if you haven't already done so. Follow the tutorial <a href=\"https://www.neonscience.org/resources/learning-hub/tutorials/neon-api-tokens-tutorial\" target=\"_blank\">Using an API Token when Accessing NEON Data with neonUtilities</a> to learn how to do this (check the Python tabs in the code cells for the Python syntax).\n",
     "\n",
-    "<a href=\"https://www.neonscience.org/resources/learning-hub/tutorials/neon-api-tokens-tutorial\" target=\"_blank\">Using an API Token when Accessing NEON Data with neonUtilities</a>. \n",
-    "\n",
-    "Note: for this tutorial, we have set up the token as an environment variable, following \"Option 2: Set token as environment variable\" in the linked lesson.\n",
+    "**Note**: for this lesson, we have set up the token as an environment variable, following \"Option 2: Set token as environment variable\" in the linked tutorial above.\n",
     "\n",
     "### Additional Resources\n",
     "If you are new to AOP hyperspectral data, we recommend exploring the following tutorial series:\n",
