update headers to shorten and fix typo

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/hyperspectral_functions/intro_hyperspectral_functions.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/hyperspectral_functions/intro_hyperspectral_functions.ipynb
@@ -377,7 +377,7 @@
    "source": [
     "Set up the data directory where we want to download our data. \n",
     "\n",
-    "**Data Tip**: If are working from a Windows Operating System (OS), there may be a path length limitation which might cause an error in downloading, since the neon download function maintains the full folder structure the data, as it is stored on Google Cloud Storage (GCS). If you see the following warning: \"`UserWarning: Filepaths on Windows are limited to 260 characters. Attempting to download a filepath that is 291 characters long. Set the working or savepath directory to be closer to the root directory or enable long path support in Windows.`\", you will either need to enable long path support in Windows (a quick online search will show you how to do this) or set the `savepath` directory so that it is shorter. You can use `os.path.abspath` to see the full path, if you have specified a relative path. For this example, we will set a short `savepath` by creating a `neon_data` directly directly under the home directory as follows:"
+    "**Data Tip**: If you are working from a Windows Operating System (OS), there may be a path length limitation which might cause an error in downloading, since the neon download function maintains the full folder structure the data, as it is stored on Google Cloud Storage (GCS). If you see the following warning: \"`UserWarning: Filepaths on Windows are limited to 260 characters. Attempting to download a filepath that is 291 characters long. Set the working or savepath directory to be closer to the root directory or enable long path support in Windows.`\", you will either need to enable long path support in Windows (a quick online search will show you how to do this) or set the `savepath` directory so that it is shorter. You can use `os.path.abspath` to see the full path, if you have specified a relative path. For this example, we will set a short `savepath` by creating a `neon_data` directly directly under the home directory as follows:"
    ]
   },
   {
@@ -674,7 +674,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot a single band of the reflectance data using `plot_aop_refl`: \n",
+    "## Plot a single band\n",
     "\n",
     "Next we'll use the function `plot_aop_refl` to plot a single band of reflectance data. You can use `help` to understand the required inputs and data types for each of these; only the band and spatial extent are required inputs, the rest are optional inputs. If specified, these optional inputs allow you to set the range color values, specify the axis, add a title, colorbar, colorbar title, and change the colormap (default is to plot in greyscale). "
    ]
@@ -782,7 +782,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot an RGB band combination using `plot_aop_rgb`: \n",
+    "## Plot an RGB band combination\n",
     "\n",
     "Next, we can use the function `plot_aop_rgb` to plot the band stack as follows:"
    ]
