minor updates, add explanation for some functions

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/hyperspectral_functions/intro_hyperspectral_functions.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/hyperspectral_functions/intro_hyperspectral_functions.ipynb
@@ -314,9 +314,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "dotenv.set_key(dotenv_path=\".env\",\n",
     "key_to_set=\"NEON_TOKEN\",\n",
-    "value_to_set=\"YOUR_TOKEN_HERE\")"
+    "value_to_set=\"YOUR_TOKEN_HERE\")\n",
+    "```"
    ]
   },
   {
@@ -428,6 +430,13 @@
     "               include_provisional=True,\n",
     "               savepath=data_dir,\n",
     "               token=my_token)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define some functions that will help us explore the files that were downloaded. You can also look in the File Explorer (Windows) or Finder (Mac) to check out the contents more interactively."
    ]
   },
   {
