--- a/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/aop_refl_xarray_classification.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/aop_refl_xarray_classification.ipynb
@@ -151,8 +151,7 @@
    "outputs": [],
    "source": [
     "# method 1: set the NEON_TOKEN directly in your code\n",
-    "# NEON_TOKEN='YOUR_TOKEN_HERE'\n",
-    "NEON_TOKEN='eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NiJ9.eyJhdWQiOiJodHRwczovL2RhdGEubmVvbnNjaWVuY2Uub3JnL2FwaS92MC8iLCJzdWIiOiJiaGFzc0BiYXR0ZWxsZWVjb2xvZ3kub3JnIiwic2NvcGUiOiJyYXRlOnB1YmxpYyIsImlzcyI6Imh0dHBzOi8vZGF0YS5uZW9uc2NpZW5jZS5vcmcvIiwiZXhwIjoxODUxNjEzMDYzLCJpYXQiOjE2OTM5MzMwNjMsImVtYWlsIjoiYmhhc3NAYmF0dGVsbGVlY29sb2d5Lm9yZyJ9.ZNOPk_xXFVEnUhPYcPESbTrCnuVv1hSN2kCEMhQWLqCkmC-irD_CxPHa7TCDAZEZuCI0vfNcIxVBJ7dkI93gEQ'"
+    "NEON_TOKEN='YOUR_TOKEN_HERE'"
    ]
   },
   {
