update next steps and discussion sections

--- a/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/aop_refl_xarray_classification.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/aop_refl_xarray_classification.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "More detailed information about NEON's airborne sampling design can be found in the paper: [Spanning scales: The airborne spatial and temporal sampling design of the National Ecological Observatory Network](https://besjournals.onlinelibrary.wiley.com/doi/10.1111/2041-210X.13942).\n",
     "\n",
-    " ### Set Up Python Environment\n",
+    "### Set Up Python Environment\n",
     " - *No Python setup requirements if connected to the workshop Openscapes cloud instance!*\n",
     "   \n",
     " - **Local Only** \n",
@@ -62,7 +62,7 @@
     "    conda create -n neon_aop -c conda-forge --yes python=3.10 gdal=3.7.2 hvplot geoviews rioxarray rasterio geopandas fiona=1.9.4 jupyter jupyter_bokeh h5py spectral scikit-image scikit-learn seaborn jupyterlab\n",
     "    ```\n",
     "\n",
-    " ### Create a NEON AOP Token\n",
+    "### Create a NEON AOP Token\n",
     " - NEON API Token (optional, but strongly recommended), see [NEON API Tokens Tutorial](https://www.neonscience.org/resources/learning-hub/tutorials/neon-api-tokens-tutorial) for more details on how to create and set up your token in Python (and R). Once you create your token (on the [NEON User Accounts](https://www.neonscience.org/about/user-accounts)) page, this notebook will show you how to set it as an environment variable and use it for downloading AOP data.\n",
     "\n",
     "### Optional: Download NEON Shapefiles\n",
@@ -1648,25 +1648,28 @@
     "\n",
     "## Discussion\n",
     "\n",
+    "Great job! You now should have a fairly good grasp on working with NEON airborne and field datasets together.\n",
+    "\n",
     "What are some things you could do to improve the classification results?\n",
     "\n",
     "Models are only as good as the underlying training data - so the better the training data (more + higher quality training data points) the better your results will be. \n",
     "\n",
-    "You could consider the following:\n",
-    "- **Increase the number of training points**: Use more training data from the other tiles\n",
-    "- **Filter out sub-optimal data**: Remove training points that were collected in poor weather conditions (e.g. > 10% cloud cover), or that are outliers (e.g. due to spatial mis-match, shadowing, or other issues)\n",
-    "- **Average the reflectance values over an entire tree crown**: In this example, we just pulled the reflectance values from a single pixel, but you could average the reflectance values over an entire tree crown to get a more representative value for each tree. If part of the tree is in shadow, you may want to remove that pixel from the average.\n",
-    "- **Tune the model parameters**: You can adjust the hyperparameters of the random forest model, such as the number of trees, maximum depth, and minimum samples per leaf, to improve performance.\n",
-    "- **Use a different classification algorithm**: Random forest is a good starting point, but you could also try other algorithms such as support vector machines, gradient boosting, or neural networks to see if they perform better.\n",
+    "You could consider some of the following options:\n",
+    "1. **Increase the number of training points**: Use more training data from the other plots (and use more AOP tiles). You could also collect your own additional data within the NEON site.\n",
+    "2. **Filter out sub-optimal data**: Remove training points that were collected in poor weather conditions (e.g. > 10% cloud cover), or that are outliers (e.g. due to spatial mis-match, shadowing, or other issues).\n",
+    "3. **Average the reflectance values over an entire tree crown**: In this example, we just pulled the reflectance values from a single pixel, but you could average the reflectance values over an entire tree crown to get a more representative value for each tree. If part of the tree is in shadow, you may want to remove that pixel from the average.\n",
+    "4. **Tune the model parameters**: You can adjust the hyperparameters of the random forest model, such as the number of trees, maximum depth, and minimum samples per leaf, to improve performance.\n",
+    "5. **Use a different classification algorithm**: Random forest is a good starting point, but you could also try other algorithms such as support vector machines, gradient boosting, or neural networks to see if they perform better.\n",
     "\n",
     "## Next Steps\n",
     "\n",
     "In this example, we just scratched the surface of what you can do with NEON reflectance data. Here are some next steps you could take to further explore and analyze the data:\n",
-    "- **Apply the model to the entire reflectance dataset**: Use the trained model to predict the tree families for all pixels in the reflectance dataset, and visualize the results.\n",
-    "- **Try out the same model on SERC that was acquired in better weather conditions**: Use the reflectance data from SERC 2017, which was collected in clearer weather conditions, to see if the model performs better. Note that you may need to make some minor modifications to the aop_h5refl2xarray functions to accommodate the slightly different data structure of the directional reflectance data product (2019 data is not yet available with BRDF and topographic corrections.)\n",
-    "- **Explore other NEON sites**: Use the `neonutilities` package to explore reflectance data from other NEON sites, and compare the spectral signatures of different land cover types.\n",
-    "- **Add in other NEON AOP datasets**: In this lesson, we only looked at the reflectance data. How might other NEON data products compliment this analysis? For example, you could look at the lidar data to get information about the structure of the vegetation, for example the Canopy Height Model (CHM) or the Digital Surface Model (DSM). You could also look at the AOP imagery data.\n",
-    "- **Use the reflectance data for other applications**: The reflectance data can be used for a variety of applications, such as mapping vegetation health, detecting disease or invasive species, and mapping droughts, wildfires, or other natural disturbances and their impacts. You could use a similar approach to explore some of these applications."
+    "\n",
+    "1. **Apply the model to the entire reflectance dataset**: Use the trained model to predict the tree families for all pixels in the reflectance dataset, and visualize the results. You may wish to include more training data for non-tree species, since the AOP data also captures non-vegetation such as water bodies, buildings, roads, etc.\n",
+    "2. **Try out the same model on SERC AOP data that was acquired in better weather conditions**: Use the reflectance data from SERC 2017, which was collected in clearer weather conditions, to see if the model performs better. Note that you may need to make some minor modifications to the aop_h5refl2xarray functions to accommodate the slightly different data structure of the directional reflectance data product (2019 data is not yet available with BRDF and topographic corrections.)\n",
+    "3. **Explore other NEON sites**: Use the `neonutilities` package to explore reflectance data from other NEON sites, and compare the spectral signatures of different land cover types.\n",
+    "4. **Add in other NEON AOP datasets**: In this lesson, we only looked at the reflectance data. How might other NEON data products compliment this analysis? For example, you could look at the lidar data to get information about the structure of the vegetation, for example the Canopy Height Model (CHM) or the Digital Surface Model (DSM). You could also look at the AOP imagery data.\n",
+    "5. **Use the reflectance data for other applications**: The reflectance data can be used for a variety of applications, such as mapping vegetation health, detecting disease or invasive species, and mapping droughts, wildfires, or other natural disturbances and their impacts. You could use a similar approach to explore some of these applications."
    ]
   },
   {
@@ -1675,7 +1678,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bonus: Apply the model to the full AOP reflectance data tile at SERC (IS tower area)\n",
+    "# Example Challenge Solution: Apply the model to the full AOP reflectance data tile at SERC\n",
     "\n",
     "# 1. Prepare the data:\n",
     "\n",
@@ -1791,7 +1794,7 @@
    "source": [
     "### Acknowledgements\n",
     "\n",
-    "Much of this tutorial was inspired by and adapated from the [NASA VITALS GitHub Repository](https://github.com/nasa/VITALS/tree/main/python). Thank you!"
+    "Much of this tutorial was inspired by and adapated from lessons in the [NASA VITALS GitHub Repository](https://github.com/nasa/VITALS/tree/main/python). Thank you!"
    ]
   }
  ],
